--- a/src/sass/noodles/util/_typography.scss
+++ b/src/sass/noodles/util/_typography.scss
@@ -18,10 +18,10 @@ small {
   color: $light-gray;
 }
 
-h1 {
-  border: 0;
-  margin-bottom: $base-margin;
-}
+// h1 {
+  // border: 0;
+  // margin-bottom: $base-margin;
+// }
 
 .nowrap {
   text-wrap: nowrap;
