--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -29,15 +29,15 @@ li {
 }
 
 .title__smiley {
-  margin-top: 8%;
-  // margin-left: -4%;
+  margin-top: 11%;
+  margin-left: -7%;
 }
 
 .about-me__headline {
   font-family: $font-chintzy;
   letter-spacing: 0.6rem;
   word-spacing: -0.5em;
-  font-size: $font-size-xxl;
+  font-size: $font-size-xl;
 }
 
 .skills ul li {
