--- a/src/sass/noodles/util/_util.scss
+++ b/src/sass/noodles/util/_util.scss
@@ -2,6 +2,8 @@
 @use "./variables" as *;
 @use "./fonts" as *;
 
+$variants: 50;
+
 *,
 *::after,
 *::before {
@@ -44,6 +46,52 @@ img {
   // max-width: 100%;
 }
 
+@mixin makeResponsive($prop, $prefix, $variant, $val) {
+  // @each $bp, $screenSize in $breakpoints {
+  @include sm {
+    .#{$prefix}-#{$variant}-sm {
+      #{$prop}: $val !important;
+    }
+    // $res: responsiveUtil()
+    // }
+  }
+  @include md {
+    .#{$prefix}-#{$variant}-md {
+      #{$prop}: $val !important;
+    }
+  }
+
+  @include lg {
+    .#{$prefix}-#{$variant}-lg {
+      #{$prop}: $val !important;
+    }
+  }
+
+  @include tablet {
+    .#{$prefix}-#{$variant}-tablet {
+      #{$prop}: $val !important;
+    }
+  }
+
+  @include hd {
+    .#{$prefix}-#{$variant}-hd {
+      #{$prop}: $val !important;
+    }
+  }
+
+  @include uhd {
+    .#{$prefix}-#{$variant}-uhd {
+      #{$prop}: $val !important;
+    }
+  }
+
+  @include uuhd {
+    .#{$prefix}-#{$variant}-uuhd {
+      #{$prop}: $val !important;
+    }
+  }
+}
+
 // generate utility classes
 @each $property, $map in $utilities {
   $prefix: map-get($map, "prefix");
@@ -55,19 +103,29 @@ img {
         #{$property}: $v;
       }
     } @else {
-      .#{$prefix}-#{$k} {
-        #{$property}: $v;
+      @if ($k == "base") {
+        @for $variant from 1 through $variants {
+          .#{$prefix}-#{$variant} {
+            #{$property}: $v * $variant;
+          }
+
+          @include makeResponsive($property, $prefix, $variant, $v * $variant);
+        }
+      } @else {
+        .#{$prefix}-#{$k} {
+          #{$property}: $v;
+        }
       }
 
       // @debug $v;
       @if (map-has-key($alignment, $property)) {
         @if ($v != 0) {
-          .#{$prefix}-x-#{$k} {
+          .#{$prefix}x-#{$k} {
             #{$property}-left: $v;
             #{$property}-right: $v;
           }
 
-          .#{$prefix}-y-#{$k} {
+          .#{$prefix}y-#{$k} {
             #{$property}-top: $v;
             #{$property}-bottom: $v;
           }
@@ -77,38 +135,36 @@ img {
   }
 }
 
-@mixin xs {
-  @media (min-width: map-get($breakpoints, "xs")) {
-    @content;
+// @function responsiveUtil($prefix, $key, $val, $prop) {
+//   @return ("");
+//   // @include lg {
+
+//   // .col-#{$i}-lg {
+//   //   flex-grow: 0;
+//   //   width: math.div($i * 100%, $grid-columns);
+//   // }
+//   //   }
+
+//   // }
+//   // }
+// }
+// @include md {
+// }
+
+// @include lg {
+// }
+
+@include tablet {
+  .flex-col-tablet {
+    flex-direction: column;
   }
 }
 
-@mixin sm {
-  @media (min-width: map-get($breakpoints, "sm")) {
-    @content;
-  }
-}
+// @include hd {
+// }
 
-@mixin md {
-  @media (min-width: map-get($breakpoints, "md")) {
-    @content;
-  }
-}
+// @include uhd {
+// }
 
-@mixin lg {
-  @media (min-width: map-get($breakpoints, "lg")) {
-    @content;
-  }
-}
-
-@mixin xl {
-  @media (min-width: map-get($breakpoints, "xl")) {
-    @content;
-  }
-}
-
-@mixin breakpoint($bp: 0) {
-  @media (min-width: $bp) {
-    @content;
-  }
-}
+// @include uuhd {
+// }
