--- a/src/sass/noodles/util/_variables.scss
+++ b/src/sass/noodles/util/_variables.scss
@@ -58,6 +58,8 @@ $base-border-radius: 20px !default;
 $base-box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1) !default;
 
 // font sizes
+$base-letter-spacing: 0.1rem !default;
+$letter-spacing: 0.6rem !default;
 $base-font-size: 1rem !default;
 $font-size-sm: $base-font-size * 0.75 !default;
 $font-size-lg: $base-font-size * 1.25 !default;
@@ -87,24 +89,40 @@ $utilities: (
       "xxl": $font-size-xxl,
     ),
   ),
+  "font-weight": (
+    "prefix": "weight",
+    "values": (
+      "100": 100,
+      "600": 600,
+      "900": 900,
+      "bold": bold,
+    ),
+  ),
   "width": (
     "prefix": "w",
     "values": (
       "max": 100%,
       "half": 50%,
+      "third": 33%,
+      "sixth": 66%,
       "min": $base-width,
       "fit": fit-content,
       "0": 0,
       "base": $min-width,
-      // "2": $min-width * 2,
-      // "3": $min-width * 4,
-      // "4": $min-width * 6,
-      // "5": $min-width * 8,
-      // "6": $min-width * 10,
-      // "7": $min-width * 12,
-      // "8": $min-width * 14,
-      // "9": $min-width * 16,
-      // "10":$min-width * 18,,,,,,,,,,,,
+    ),
+  ),
+  "position": (
+    "prefix": "pos",
+    "values": (
+      "absolute": absolute,
+      "relative": relative,
+      "fixed": fixed,
+    ),
+  ),
+  "letter-spacing": (
+    "prefix": "kern",
+    "values": (
+      "base": $base-letter-spacing,
     ),
   ),
   "height": (
