--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -86,7 +86,7 @@ footer {
 //   z-index: -1;
 // }
 
-.headshot-frame {
+.picture-frame-shadow {
   // position: absolute;
   // transform: translateX(-48%) translateY(8%);
   // /* height: 66%; */
@@ -99,7 +99,7 @@ footer {
   /* height: 66%; */
   z-index: -1;
   top: 9%;
-  left: -32%;
+  left: -20.8%;
   width: 100%;
 }
 
