--- a/src/sass/noodles/util/_grid.scss
+++ b/src/sass/noodles/util/_grid.scss
@@ -75,6 +75,10 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
       width: math.div($i * 100%, $grid-columns);
     }
   }
+
+  .w-1-8-tablet {
+    width: 1.6rem !important;
+  }
 }
 
 @include hd {
