--- a/src/sass/noodles/util/_colors.scss
+++ b/src/sass/noodles/util/_colors.scss
@@ -25,22 +25,22 @@
     //light
     @for $i from 1 through 5 {
       .#{$clr}-light-#{$i} {
-        color: mix(white, $val, $i * 10);
+        color: mix(white, $val, $i * 10%);
       }
 
       .#{$clr}-light-hover-#{$i} {
         &:hover {
-          color: mix(white, $val, $i * 10);
+          color: mix(white, $val, $i * 10%);
         }
       }
 
       .bg-#{$clr}-light-#{$i} {
-        background-color: mix(white, $val, $i * 10);
+        background-color: mix(white, $val, $i * 10%);
       }
 
       .bg-#{$clr}-light-hover-#{$i} {
         &:hover {
-          background-color: mix(white, $val, $i * 10);
+          background-color: mix(white, $val, $i * 10%);
         }
       }
     }
@@ -48,22 +48,22 @@
     //dark side
     @for $i from 1 through 5 {
       .#{$clr}-dark-#{$i} {
-        color: mix(black, $val, $i * 10);
+        color: mix(black, $val, $i * 10%);
       }
 
       .#{$clr}-dark-hover-#{$i} {
         &:hover {
-          color: mix(black, $val, $i * 10);
+          color: mix(black, $val, $i * 10%);
         }
       }
 
       .bg-#{$clr}-dark-#{$i} {
-        background-color: mix(black, $val, $i * 10);
+        background-color: mix(black, $val, $i * 10%);
       }
 
       .bg-#{$clr}-dark-hover-#{$i} {
         &:hover {
-          background-color: mix(black, $val, $i * 10);
+          background-color: mix(black, $val, $i * 10%);
         }
       }
     }
