fixed... stuff? moved to sanity... it's a mess

--- a/src/routes/(pages)/blog/[article]/article.css
+++ b/src/routes/(pages)/blog/[article]/article.css
@@ -2,7 +2,18 @@
   letter-spacing: 3px;
   word-spacing: -3px;
 }
+
 .letter--spacing--md {
   letter-spacing: 3.6px;
   word-spacing: -9px;
+}
+
+/* .banner {
+  background-position: 0rem -46rem;
+} */
+
+@media (max-width: 768px) {
+  .banner {
+    background-position: 0rem -18rem;
+  }
 }
