fix: article reactivity updated: houdini added: icons font for like one icon.. modified gql queries
did a bunch of shit, i barely remember half of it but we are reactive. we are "stable".. we are cooking

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,6 @@
 @import url("animations/typewriter.css");
 @import url("util/util.css");
+@import url("util/icons.css");
 /* @import url("/assets/fonts/pokemon_classic/Pokemon/Classic.ttf"); */
 
 @tailwind base;
