--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,15 +1,14 @@
 @import url("animations/typewriter.css");
 @import url("util/util.css");
 @import url("util/icons.css");
+@import "tailwindcss";
 /* @import url("/assets/fonts/pokemon_classic/Pokemon/Classic.ttf"); */
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --dh-orange: #e77236;
 }
+
 
 body,
 img:hover,
@@ -18,23 +17,30 @@ button:hover {
   cursor: url(/assets/bitmap/cursor-pointer-finger.png) format("ttf");
 }
 
-@font-face {
+/* @font-face {
   font-family: "Chintzy";
   font-style: normal;
   src: url(/assets/fonts/Chintzy/chintzy.ttf) format("ttf");
-}
+} */
 
-@font-face {
+/* @font-face {
   font-family: "Pokemon Classic";
   font-style: normal;
   src: url(/assets/fonts/pokemon_classic/Pokemon\ Classic.ttf) format("ttf");
-}
+} */
 
-@font-face {
+/* @font-face {
   font-family: "QuirkyRobot";
   font-style: normal;
   src: url(/assets/fonts/quirky-robot/QuirkyRobot.ttf) format("ttf");
-}
+} */
+
+/* 
+@font-face {
+  font-family: "SpaceMono-Regular";
+  font-style: normal;
+  src: url(/assets/fonts/spacemono/SpaceMono-Regular.ttf) format("ttf");
+} */
 
 @layer components {
   .btn {
@@ -43,13 +49,11 @@ button:hover {
   }
 
   .filter--orange {
-    filter: brightness(0) saturate(100%) invert(48%) sepia(92%) saturate(501%)
-      hue-rotate(334deg) brightness(95%) contrast(90%);
+    filter: brightness(0) saturate(100%) invert(48%) sepia(92%) saturate(501%) hue-rotate(334deg) brightness(95%) contrast(90%);
   }
 
   .filter--white {
-    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%)
-      hue-rotate(193deg) brightness(107%) contrast(101%);
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(193deg) brightness(107%) contrast(101%);
   }
 }
 
@@ -76,6 +80,7 @@ canvas {
   transform: translateX(-8px) translatey(4px);
   @apply text-orange-dh;
 }
+
 .shadow--solid__ashley::before {
   content: "ASHLEY";
   width: fit-content;
@@ -117,38 +122,48 @@ canvas {
   &::-webkit-scrollbar {
     width: 0.5em;
   }
+
   &::-webkit-scrollbar-track {
     margin-block: 0.5em;
     /* border-radius: 25vw; */
   }
+
   &::-webkit-scrollbar-thumb {
     /* border-radius: 25vw; */
     transition: background-color 250000ms;
   }
+
   &::-webkit-scrollbar-thumb:hover {
     /* border-radius: 25vw; */
   }
+
   &::-webkit-scrollbar {
     width: 0.5em;
   }
+
   &::-webkit-scrollbar-track {
     margin-block: 0.5em;
     /* border-radius: 25vw; */
   }
+
   &::-webkit-scrollbar-thumb {
     /* border-radius: 25vw; */
     transition: background-color 250000ms;
   }
+
   &::-webkit-scrollbar-thumb:hover {
     /* border-radius: 25vw; */
   }
+
   &:hover {
     &::-webkit-scrollbar-track {
       background-color: rgba(128, 128, 128, 0.08);
     }
+
     &::-webkit-scrollbar-thumb {
       background-color: rgba(221, 226, 221, 0.885);
     }
+
     &::-webkit-scrollbar {
       opacity: 100%;
       width: 0.5em;
@@ -225,6 +240,7 @@ canvas {
     grid-template-columns: 1fr;
     justify-items: end;
   }
+
   div.hero__cta {
     justify-self: end;
     padding-left: 0;
