fixed a bunch of broken styling and stuff

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 @import url("./styles/style.css");
 @import "./styles/util/fonts.css";
 @import "./styles/util/colors.css";
+@import "./styles/util/components.css";
 @import "tailwindcss";
 
 
