--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,6 +4,7 @@
 @import url("util/colors.css");
 @import url("util/fonts.css");
 @import "tailwindcss";
+
 /* @import url("/assets/fonts/pokemon_classic/Pokemon/Classic.ttf"); */
 
 
@@ -20,26 +21,6 @@ img:hover,
 a:hover,
 button:hover {
   cursor: url(/assets/bitmap/cursor-pointer-finger.png) format("ttf");
-}
-
-
-@layer components {
-  .btn {
-    letter-spacing: 0.15438;
-    width: var(--w-36);
-    font-family: var(--font-space-mono);
-    height: var(--h-9);
-    color: var(--color-dh-black);
-    /*  flex-shrink-0 bg-dh-light-gray   font-bold text-center; */
-  }
-
-  .filter--orange {
-    filter: brightness(0) saturate(100%) invert(48%) sepia(92%) saturate(501%) hue-rotate(334deg) brightness(95%) contrast(90%);
-  }
-
-  .filter--white {
-    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(193deg) brightness(107%) contrast(101%);
-  }
 }
 
 canvas {
@@ -120,9 +101,9 @@ canvas {
     transition: background-color 250000ms;
   }
 
-  &::-webkit-scrollbar-thumb:hover {
-    /* border-radius: 25vw; */
-  }
+  /* &::-webkit-scrollbar-thumb:hover {
+    border-radius: 25vw;
+  } */
 
   &::-webkit-scrollbar {
     width: 0.5em;
@@ -138,9 +119,9 @@ canvas {
     transition: background-color 250000ms;
   }
 
-  &::-webkit-scrollbar-thumb:hover {
-    /* border-radius: 25vw; */
-  }
+  /* &::-webkit-scrollbar-thumb:hover {
+    border-radius: 25vw;
+  } */
 
   &:hover {
     &::-webkit-scrollbar-track {
@@ -204,7 +185,7 @@ canvas {
   border-bottom: solid 3.6px;
   z-index: -1;
   transition: transform 0.3s ease;
-  border-bottom-color: var(--color-dh-orangee);
+  border-bottom-color: var(--color-dh-orange);
 }
 
 .dh__underline {
