--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -43,7 +43,7 @@ canvas {
   width: fit-content;
   position: absolute;
   z-index: -1;
-  transform: translateX(-8px) translatey(4px);
+  transform: translateX(-6px) translateY(3px);
   /* @apply text-dh-orange; */
   color: var(--color-dh-orange);
 }
@@ -53,7 +53,7 @@ canvas {
   width: fit-content;
   position: absolute;
   z-index: -1;
-  transform: translateX(-6px) translatey(3px);
+  transform: translateX(-6px) translateY(3px);
   /* font: var(--dh-orange); */
   color: var(--color-dh-orange);
 }
@@ -63,7 +63,7 @@ canvas {
   width: fit-content;
   position: absolute;
   z-index: -1;
-  transform: translateX(-8px) translatey(3px);
+  transform: translateX(-6px) translateY(3px);
   color: var(--color-dh-orange);
 }
 
